--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,73 @@
-gymnasium
-playwright==1.32.1
-Pillow
-evaluate
-openai==0.27.0
-types-tqdm
-tiktoken
-aiolimiter
+aiohttp==3.9.5
+aiolimiter==1.1.0
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+async-timeout==4.0.3
+attrs==23.2.0
 beartype==0.12.0
-flask
-nltk
-text-generation
+blessed==1.20.0
+blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+datasets==2.20.0
+dill==0.3.8
+distro==1.9.0
+evaluate==0.4.2
+exceptiongroup==1.2.2
+Farama-Notifications==0.0.4
+filelock==3.15.4
+Flask==3.0.3
+frozenlist==1.4.1
+fsspec==2024.5.0
+gpustat==1.1.1
+greenlet==2.0.1
+gymnasium==0.29.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.23.5
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+MarkupSafe==2.1.5
+modelscope==1.16.1
+multidict==6.0.5
+multiprocess==0.70.16
+nltk==3.8.1
+numpy==2.0.0
+openai==1.35.14
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+playwright==1.32.1
+pyarrow==17.0.0
+pyarrow-hotfix==0.6
+pydantic==2.8.2
+pydantic_core==2.20.1
+pyee==9.0.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.32.3
+safetensors==0.4.3
+six==1.16.0
+sniffio==1.3.1
+text-generation==0.7.0
+tiktoken==0.7.0
+tokenizers==0.13.3
+tqdm==4.66.4
 transformers==4.33.2
+types-tqdm==4.66.0.20240417
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+-e git+https://github.com/HuiyuanYan/webarena.git@fc5c20c26edf1ae3302bd64e395b64c57d6f25a0#egg=webarena
+Werkzeug==3.0.3
+xxhash==3.4.1
+yarl==1.9.4
